--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+header {
+  background-color: #a7c7f8; /* Azul clarinho */
+}
+
 body {
   font-family: 'Segoe UI', sans-serif;
 }
@@ -18,5 +22,11 @@ body {
 }
 
 footer {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
+  color: #666;
+  background-color: #f8f9fa;
+  padding: 10px 0;
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
