--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ footer a:hover {
 .produto-imagem {
   width: 100%;
   max-width: 400px;
-  height: auto;
+  height: 320px;
   object-fit: cover;
   border-radius: 20px;
   margin: 0 auto;
